--- a/Sample/src/main/res/layout/activity_main.xml
+++ b/Sample/src/main/res/layout/activity_main.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <com.jfeinstein.jazzyviewpager.JazzyViewPager
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
